Community card vert/hori alignment fixed

--- a/styles/vvRed.css
+++ b/styles/vvRed.css
@@ -26,23 +26,16 @@
 	position: absolute;
 }
 
-.tableContainer {
-	height: 100%;
-    width: 100%;
-    display: table;
-    position: absolute;
+.communityPadder {
+	white-space: nowrap;
+    text-align: center;
 }
 
-.communityPadder {
-	display: table-cell;
+.communityHelper {
+	display: inline-block;
+    height: 100%;
     vertical-align: middle;
 }
-
-#commCell{
-	margin: auto;
-}
-
 .communityDeckCard {
-	display: table-cell;
-	margin: auto;
+	vertical-align: middle;
 }
